<resources>
    <string name="app_name">SQLiteTest</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="add_contact">Add Contact</string>
    <string name="remove_contact">Remove Contact</string>
    <string name="last_modified">Last Modified</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="add_description">Add Description</string>
    <string name="clear_database">Clear Database</string>
    <string name="action_settings">Settings</string>
    <string name="my_irl">MY IRL</string>
    <string name="remove_contacts">Remove Contacts</string>
    <string name="remove_content">Remove Descriptions</string>
    <string name="remove_descriptions">Remove Descriptions</string>
    <string name="description">Description</string>
</resources>