<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- "Mark Favorite", should appear as action button if possible -->

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/app_bar_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_removeContacts"
        android:title="@string/remove_contacts" />
    <item
        android:id="@+id/action_clearDatabase"
        android:title="@string/clear_database"
        android:visible="false" />
</menu>